--- a/index.html
+++ b/index.html
@@ -1,22 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1st one too late</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500&family=Work+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
+    <title>New Me</title>
 </head>
+
 <body>
-    <header>
+    <header class="heading">
+        <div class="heading-text">
+            <h1 class="quote">You Can If You Think You Can</h1>
+            <p class="header-description">
+                Emphasizes how much attitude determines success or failure.
+
+                This is true for most projects you take on and certainly for technology initiatives. Most people think
+                choosing the right software or implementation consultant are what makes or breaks a project. While these
+                are
+                important, a project's fate is mostly determined well before you make these decisions. This is because
+                so
+                much of it is based on attitude.
+            </p>
+            <button class="button-header">Contact Us</button>
+        </div>
+
 
     </header>
-
     <main>
+        <section>
+            <div class="parent-div">
+                <img src="./images/person.png" alt="It's A Excited Person" width="569px" height="723.3px">
+                <div class="child-div">
+                    <h2 class="c-div-title">My Failures of Previous Year</h2>
+                    <p class="c-div-description">To err is Human.So We can never avoid probable mistakes in our day to
+                        day life.For this reason,we should be aware always about the possible impact or damage of it.So
+                        we must calculate faults of our previous career and need to make us prepared for tackling the
+                        upcoming challenges.</p>
+
+                    <li class="failure">Waking up at Late</li>
+                    <li class="failure">Wasting Times without Limit</li>
+                    <li class="failure">Doing Whatever I Want</li>
+                    <li class="failure">Leading Undisciplined Life</li>
+                    <li class="failure">Having Zero Goals & Plans</li>
+
+
+                </div>
+            </div>
+        </section>
+        <!-- For Achieving Bonus Point // Extra Section -->
+        <section>
+            <div class="visions">
+                <div class="vsions">
+                    <h2 class="h2">My Visions:</h2>
+                    <li class="vision1">Building A Powerful PC</li>
+                    <li class="vision1">Exchanging Knowledge & Information</li>
+                    <li class="vision1">Helping the Helpless</li>
+                    <li class="vision1">Leading People Selflessly</li>
+                    <li class="vision1">Maintaining A Good Diet & Habits</li>
+                </div>
+            </div>
+
+        </section>
+        <section>
+            <div class="heading2">
+                <h2>My Plans</h2>
+            </div>
+            <div class="parent-div2">
+                <div class="web-development">
+                    <img src="./images/icons/web.png" alt="It's A Web Development Icon">
+                    <h3 class="web-title">Web Development</h3>
+                    <p class="web-para">I want to start</p>
+                </div>
+                <div class="js">
+                    <img src="./images/icons/js.png" alt="It's An Icon of JavaScript">
+                    <h3 class="js-title">Javascript</h3>
+                    <p class="js-para">I want to learn</p>
+                </div>
+                <div class="smoking-habit">
+                    <img src="./images/icons/smoke.png" alt="It's An Icon of Smoking">
+                    <h3 class="smoke-title">Smoking Habit</h3>
+                    <p class="smoke-para">Will Beware People to Give it up</p>
+                </div>
+                <div class="ecommerce">
+                    <img src="./images/icons/ecom.png" alt="E-commerce Icon">
+                    <h3 class="ecom-title">E-commerce</h3>
+                    <p class="ecom-para">I want to Develop</p>
+
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="image">
+                <h4 class="words">Always Keep A Positive
+                    Mindset</h4>
+                <button class="button-header">Call Now</button>
+            </div>
+        </section>
 
     </main>
-
     <footer>
-        
+
+        <div class="parentdiv3">
+            <div class="leftside">
+                <h6 class="footer-title">Future</h6>
+                <p class="footer-leftside-description">I want to be a successful Full-stack Web-developer.That's why I'm
+                    working hard as much as I can.Please keep Us All in Your Valuable Prayers</p>
+
+                <p class="mail">E-mail : rohit.rubaet@gmail.com </p>
+                <p class="tele">Phone : 013 170 700 08</p>
+                <a href="#">
+                    <img src="./images/icons/fb.png" alt="Facebook">
+                </a>
+                <a href="#">
+                    <img src="./images/icons/twitter.png" alt="Twitter">
+                </a>
+                <a href="#">
+                    <img src="./images/icons/youtube.png" alt="You-Tube">
+                </a>
+            </div>
+            <div class="rightside">
+                <h6 class="rightside-title">Subscribe</h6>
+                <form class="form">
+                    <input type="Email" placeholder="Enter Your E-mail">
+                </form>
+                <button class="submit-button">Subscribe</button>
+
+            </div>
+        </div>
+
     </footer>
+
 </body>
+
 </html>
