--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Header section Starts -->
     <header class="header">
-
-    </header>
         <div class="header-div">
             <h1>All Thinks Are <br> Possible If You <br> believe</h1>
             <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p>
             <button class="button">Contact Us</button>
         </div>
+    </header>
+    <!-- Header section Ends -->
+
+    <!-- Main section Starts -->
     <main class="main">
-
+        
     </main>
-
+    <!-- Main section Ends -->
     <footer class="footer">
 
     </footer>
