--- a/index.html
+++ b/index.html
@@ -21,7 +21,20 @@
 
     <!-- Main section Starts -->
     <main class="main">
-        
+
+        <!-- Failure section Starts -->
+        <section class="failure">
+            <div class="failure-img">
+                <img src="/images/person.png" alt="failure person image">
+            </div>
+
+            <div class="failure-options">
+                <h2 class="head-2">My failures of <br> previous year</h2>
+                <p class="paragraph">In 2022 many good and bad things happened in my life. Some of the worst incidents still remain as painful memories. Inshallah, good things will happen in the new year. Below are some of the failures of last year of my life.</p>
+            </div>
+
+
+        </section>
     </main>
     <!-- Main section Ends -->
     <footer class="footer">
