--- a/index.html
+++ b/index.html
@@ -102,25 +102,27 @@
                 <div class="plans-list">
                     <img src="/images/icons/web-development.png" alt="web development" height="93px" width="93px">
                     <h3>Web Development</h3>
-                    <p>I want to finish the course successfully</p>
+                    <p>I will finish</p>
                 </div>
                 <div class="plans-list">
                     <img src="/images/icons/js.png" alt="javascript">
                     <h3>Javascript</h3>
-                    <p>I want to learn with team PH</p>
+                    <p>I want to learn</p>
                 </div>
                 <div class="plans-list">
                     <img src="/images/icons/email.png" alt="hired mail" height="93px" width="93px">
-                    <h3>I want to get a good job</h3>
+                    <h3>A good job</h3>
+                    <p>I must get one</p>
                 </div>
                 <div class="plans-list">
                     <img src="/images/icons/saving.png" alt="time and money saving" height="93px" width="93px">
-                    <h3>Time and Money Management</h3>
-                    <p>I must learn them both</p>
+                    <h3>T & M Management</h3>
+                    <p>I should learn</p>
                 </div>
                 <div class="plans-list">
                     <img src="/images/icons/family.png" alt="family" height="93px" width="93px">
-                    <h3>I want to finish successfully</h3>
+                    <h3>Family Time</h3>
+                    <p>I will try</p>
                 </div>
             </div>
         </section>
