--- a/index.html
+++ b/index.html
@@ -125,15 +125,25 @@
                     <p>I will try</p>
                 </div>
             </div>
+
         </section>
-        <!-- Plans section Starts -->
+        <!-- Plans section Ends -->
+
+        <!-- Gradient section Starts -->
+        <section class="gradient">
+            <div class="gradient-div">
+                <h2 class="head-2">Awlays keep a positive <br> mindset</h2>
+                <button class="button">Call Now</button>
+            </div>
+        </section>
+        <!-- Gradient section Ends -->
 
     </main>
     <!-- Main section Ends -->
 
     <!-- Footer section Starts -->
     <footer class="footer">
-
+        
     </footer>
     <!-- Footer section Ends -->
 </body>
