--- a/index.html
+++ b/index.html
@@ -32,30 +32,30 @@
                 <p class="paragraph">In 2022 I had some good memories and a few achievement. Most of them are like just waves of the ocean. It was good as long as they lasted. Below are some of the good memories of last year of my life.</p>
 
                 <div class="success-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Completed my Honours degree with a pretty good CGPA.</p>
                 </div>
                 <div class="success-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Got a job right after the day I got my provisional certificate.</p>
                 </div>
                 <div class="success-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Went to my hometown several times.</p>
                 </div>
                 <div class="success-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Informed my family about my love and they agreed.</p>
                 </div>
                 <div class="success-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Enrolled in the 7th batch of Programming Hero.</p>
                 </div>
                 
             </div>
 
             <div class="success-img">
-                <img src="/images/success.jpg" alt="success person image">
+                <img src="./images/success.jpg" alt="success person image">
             </div>
 
         </section>
@@ -64,7 +64,7 @@
         <!-- Failure section Starts -->
         <section class="failure">
             <div class="failure-img">
-                <img src="/images/person.png" alt="failure person image">
+                <img src="./images/person.png" alt="failure person image">
             </div>
 
             <div class="failure-options">
@@ -72,23 +72,23 @@
                 <p class="paragraph">In 2022 a lot of bad things happened in my life. Some of the worst incidents still remain as painful memories. Inshallah, good things will happen in the new year. Below are some of the failures of last year of my life.</p>
 
                 <div class="failures-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Failed to get a good job.</p>
                 </div>
                 <div class="failures-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Failed to learn any new skills.</p>
                 </div>
                 <div class="failures-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Failed to practice my existing skills. </p>
                 </div>
                 <div class="failures-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Failed to prepare myself to fight for upcoming days.</p>
                 </div>
                 <div class="failures-list">
-                    <img src="/images/icons/checklist.png" alt="checklist" height="24px" width="24px">
+                    <img src="./images/icons/checklist.png" alt="checklist" height="24px" width="24px">
                     <p>Failed to fulfill promises made to myself and to loved ones.</p>
                 </div>
 
@@ -102,27 +102,27 @@
             <h2 class="head-2">My Plans</h2>
             <div class="plans-div">
                 <div class="plans-list">
-                    <img src="/images/icons/web-development.png" alt="web development" height="93px" width="93px">
+                    <img src="./images/icons/web-development.png" alt="web development" height="93px" width="93px">
                     <h3>Web Development</h3>
                     <p>I will finish</p>
                 </div>
                 <div class="plans-list">
-                    <img src="/images/icons/js.png" alt="javascript">
+                    <img src="./images/icons/js.png" alt="javascript">
                     <h3>Javascript</h3>
                     <p>I want to learn</p>
                 </div>
                 <div class="plans-list">
-                    <img src="/images/icons/email.png" alt="hired mail" height="93px" width="93px">
+                    <img src="./images/icons/email.png" alt="hired mail" height="93px" width="93px">
                     <h3>A good job</h3>
                     <p>I must get one</p>
                 </div>
                 <div class="plans-list">
-                    <img src="/images/icons/saving.png" alt="time and money saving" height="93px" width="93px">
+                    <img src="./images/icons/saving.png" alt="time and money saving" height="93px" width="93px">
                     <h3>T & M Management</h3>
                     <p>I should learn</p>
                 </div>
                 <div class="plans-list">
-                    <img src="/images/icons/family.png" alt="family" height="93px" width="93px">
+                    <img src="./images/icons/family.png" alt="family" height="93px" width="93px">
                     <h3>Family Time</h3>
                     <p>I will try</p>
                 </div>
@@ -156,9 +156,9 @@
                 </div>
                 
                 <div class="social-icons">
-                    <img src="/images/icons/fb.png" alt="facebook">
-                    <img src="/images/icons/twitter.png" alt="twitter">
-                    <img src="/images/icons/youtube.png" alt="youtube">
+                    <img src="./images/icons/fb.png" alt="facebook">
+                    <img src="./images/icons/twitter.png" alt="twitter">
+                    <img src="./images/icons/youtube.png" alt="youtube">
                 </div>
             </div>
 
