--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <!-- Gradient section Starts -->
         <section class="gradient">
             <div class="gradient-div">
-                <h2 class="head-2">Awlays keep a positive <br> mindset</h2>
+                <h2 class="head-2">Always keep a positive <br> mindset</h2>
                 <button class="button">Call Now</button>
             </div>
         </section>
